<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unit Converter</string>
    <string name="action_settings">Settings</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="backtomain">Return</string>
    <string name="distance">Miles/Kilometers Distance Converter</string>
    <string name="pounds">Pounds</string>
    <string name="kilograms">Kilograms</string>
    <string name="weightIntro">Pounds &amp; Kilograms Converter</string>
    <string name="tempIntro">Celsius &amp; Fahrenheit Temperature Converter</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="default_unit">1</string>
    <string name="mainIntro">Common Unit Converters</string>
    <string name="reset">Reset</string>

</resources>
